added string template for data path

--- a/src/data/datamaker.ipynb
+++ b/src/data/datamaker.ipynb
@@ -31,7 +31,7 @@
       },
       "outputs": [],
       "source": [
-        "data_folder = '/content/drive/Shareddrives/Shared_Stefano_Vicenzo/Acquisitions/Data/TVS'\n",
+        "data_folder = '.../Acquisitions/Data/TVS'\n",
         "data_format = 'data.mat'"
       ]
     },
